--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,9 @@
 
 <body>
     <div class="main-content">
+        <p>This site was created by Suh Kim. It uses data from mapbox.com and darksky.net</p>
         {{>header}}
-        <img class="portrait" src="/img/me.png">
+        <img class="portrait" src="/img/suhkim.jpg">
     </div>
     
     {{>footer}}
